2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* netinet/in_chksum.c: Remove duplicate case to include
	in_chksum_arm.c.

2003-02-20	Till Straumann <strauman@slac.stanford.edu>

	PR 351/networking
	* nfs/bootp_subr.c: Fix ridiculous leak in bootp and use
	strdup_bootp_realloc() everywhere for sake of consistency.

2003-02-11	Mike Siers <mikes@poliac.com>

	* rtems/rtems_glue.c: A small patch to the network daemon task
	code.  I just added code to check the return value of
	the rtems_bsdnet_event_receive function.  Only when
	this function returns a SUCCESSFUL status, will the
	event flags be checked.  This is more of a code cleanup issue
	than a bug.  The patch will just ensure the ipintr() and
	arpintr() functions are only called when a event is signaled.

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AM_INIT_AUTOMAKE([1.7.2]).

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_PREREQ(2.57).

2003-02-06	Mike Siers <mikes@poliac.com>

	PR 342/networking
	* kern/uipc_mbuf.c: The RTEMS version of the m_copyback is changing
	the m_len value of the mbuf.  I looked into the source from another
	BSD system and the mbuf length is not changed inside this function. 
	The m_copyback function is only being used in the net/rtsock.c file. 
	So I think this problem is only visable under certain routing table
	conditions.  

2003-02-05	Thomas Doerfler <Thomas.Doerfler@imd-systems.de>

	PR 341/networking
	* lib/ftpfs.c: Account for NULL at end of strings when malloc()'ing
	memory.

2003-01-28	Joel Sherrill <joel@OARcorp.com>

	* Makefile.am: Add kern/kern_sysctl.c to Makefile.am so networking
	tests build. This was subsequently reported as PR337 before I
	committed the fix.

2003-01-27	Till Straumann <strauman@SLAC.Stanford.edu>

	* libc/getproto.c, libc/getprotoname.c: modification to call